# a-life-simulator

./: CMakeLists.txt  LICENSE  README.md  main  main.cpp  makefile
src/: AlifeAgent.cpp  Factions.cpp  Mutant.cpp  Stalker.cpp  Team.cpp  Zone.cpp  ZoneRenderer.cpp
src/headers/: AlifeAgent.h  EnvironmentEntity.h  Factions.h  Mutant.h  Stalker.h  Team.h  Zone.h  ZoneRenderer.h
src/interfaces/: IZone.h
src/util/: Structures.h
